# mcp-for-beginners

./: .env.example  .gitignore  README.md  agent.py  api.py  crew_multiple_tasks.py  main.py  paths.py  pyproject.toml  server.py  user.py
crewAI_examples/: crew.py  crew_multiple_tasks.py
db/: hotels_training.db
examples/: pyproject.toml
examples/server/: user.py
frontend/: package-lock.json
frontend/src/: styles.css
frontend/src/components/: ChatMessage.tsx  ItineraryPanel.tsx  Markdown.tsx  ToolIcon.tsx  ToolInvocation.tsx
frontend/src/lib/: chat-types.ts  mcp-tools.ts  useTripChat.ts
frontend/src/routes/: __root.tsx  index.tsx
langgraph_examples/: client.py
server/: time.py
tools/: __init__.py  create_itinerary.py  get_attractions.py  get_weather.py  mock_data.py  search_flights.py  search_hotels.py  utils.py
