[project]
name = "mcp-for-beginners"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-ai-slim[anthropic,mcp]>=1.104.0",
    "python-dotenv>=1.2.2",
]
